--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "balkan-agency",
+  "name": "fullbet",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:balkan-agency": "node dist/balkan-agency/server/server.mjs"
+    "serve:ssr:balkan-agency": "node dist/fullbet/server/server.mjs"
   },
   "private": true,
   "dependencies": {
